--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>React App</title>
+    <title>Dostiyan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
